Fix horizontal overflow

--- a/assets/stylesheets/less/style.less
+++ b/assets/stylesheets/less/style.less
@@ -25,6 +25,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   height: 100%;
+  overflow-x: hidden;
 }
 body {
   color: @bodyColor;
